# fp_projects

./: Makefile  README.md  build.sh  test.sh
.github/workflows/: build-and-test.yml
inference/: Makefile  README.md
inference/base/: Makefile  examples.ml  inference.ml  main.ml  types.ml  utils.ml
inference/context/: examples.ml  inference.ml  main.ml  types.ml  utils.ml
inference/rules/: Makefile  examples.ml  inference.ml  types.ml  utils.ml
lambda-parsing/: Makefile  README.md  input.in
lambda-parsing/src/: eval.ml  expression.ml  main.ml  monad.ml  parsing.ml  token.ml  tokenization.ml
lambda-parsing/tests/: applications.in  comments.in  complex.in  constants_operators.in  factorial.in  functions.in  input.in  ite.in  let_expressions.in  nested_tuples.in  pattern_matching.in  shadowing.in
network-3.2.8.0/: configure
network-3.2.8.0/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
network-3.2.8.0/dist-newstyle/cache/: compiler  config  elaborated-plan  (+5 more)
network-3.2.8.0/include/: HsNetworkConfig.h.in
python/: server.py
rpcc/: Makefile.kvstore  kvstore.x  kvstore_clnt.c  kvstore_svc.c  kvstore_xdr.c
src/: KVStore.hi  KVStore.hs  Main.hi  Main.hs
src/Http/: Client.hi  Lib.hi
src/Rpc/: Client.hi  Client.hs  Lib.hi  Lib.hs
src/Test/: Client.hi
tagless-final/: README.md  project.cabal  test.sh
tagless-final/rpcc/: kvstore.h  kvstore_client.c  kvstore_server  kvstore_server.c
tagless-final/src/: Main.hs
tagless-final/src/Http/: Client.hs  Lib.hs
tagless-final/src/Rpc/: Lib.hs
tagless-final/src/Test/: Client.hs
(+1 files in other folders)
