cabal-version:      2.4
version:            0.1.0.0
name:               project
license:            MIT
build-type:         Simple

executable main
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    other-modules:    Http.Client,
                      Http.Lib,
                      KVStore,
                      Rpc.Client,
                      Rpc.Lib,
                      Test.Client
    build-depends:
        base,
        containers,
        bytestring,
        binary,
        random,
        network,
    ghc-options:      -XDeriveFunctor
                      -XGeneralizedNewtypeDeriving